2008-04-14  Martin Leidig  <mleidig@schlund.de>

	Use "_" instead of ":" as separator for the secure session cookie value because
	the colon doesn't work any more since Tomcat 5.5.26 (the right hand side of the
	value is truncated). Because the cookie cleanup code of former Pfixcore versions
	doesn't work with such new cookies (throws an exception) and it's possible that
	old and new versions of the cookie are present at the same time (e.g. when
	switching to the new pfixcore version), the secure session cookie is renamed
	and we temporarily support the cleanup of both versions.

	* src/de/schlund/pfixxml/ServletManager.java

2008-04-08  Martin Leidig  <mleidig@schlund.de>

	Added role-based authorization support for directoutputserver requests. Now 
	you can reference authconstraints defined in the context configuration using
	<authconstraint ref="..."/> within the directoutputserver configuration 
	file (as subelement of the directoutputpagerequest element to asssign an
	authconstraint to a single request or as subelement of the directoutputserver
	element to assign it to all requests by default). If the authconstraint is
	violated a 403 error is returned.

	Modified:
	* src/de/schlund/pfixxml/DirectOutputServlet.java
	* src/de/schlund/pfixxml/config/impl/DirectOutputServletConfigImpl.java
	* src/de/schlund/pfixxml/config/impl/DirectOutputPageRequestConfigImpl.java
	* src/de/schlund/pfixxml/config/DirectOutputServletConfig.java
	* src/de/schlund/pfixxml/config/DirectOutputPageRequestConfig.java
	* projects/core/schema/properties200401.xsd

	Added:
	* src/de/schlund/pfixxml/config/impl/DirectAuthConstraintRule.java

2008-04-07  Martin Leidig  <mleidig@schlund.de>

	Workaround for cookie loss problem: Despite receiving a non-empty request 
	cookie header from the browser Tomcat sometimes inexplicably returns null 
	calling HttpServletRequest.getCookies(). In this case we directly parse the 
	cookie header by calling the utility method CookieUtils.getCookies().
